<resources>
    <string name="app_name">BGC Events</string>

    <!-- Navigation -->
    <string name="action_refresh">Refresh</string>
    <string name="action_log_in">Log In</string>
    <string name="action_new_event">New Event</string>
    <string name="action_new_member">New MotM</string>
    <string name="calendar">Calendar</string>
    <string name="announcements">Announcements</string>
    <string name="members_of_the_month">MotM</string>

    <!-- Club Houses -->
    <string name="location_hill">Hill Clubhouse</string>
    <string name="location_jack_walker">Jack Walker Clubhouse</string>
    <string name="location_columbia">Columbia Clubhouse</string>
    <string name="location_southeast">Southeast Clubhouse</string>

    <!-- Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Boys and Girls Club Events</string>
    <string name="locations_title">Locations</string>
    <string name="views_title">Views</string>
    <string name="view_daily">Daily</string>
    <string name="view_weekly">Weekly</string>
    <string name="view_monthly">Monthly</string>

    <!-- Strings related to login -->
    <string name="title_login_activity">Authentication</string>
    <string name="button_logout">Log Out</string>
    <string name="button_login">Log In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <!-- Calendar Date -->
    <string name="view_daily_time">%1$s to %2$s</string>
    <string name="sun_abrv">Sun</string>
    <string name="mon_abrv">Mon</string>
    <string name="tue_abrv">Tue</string>
    <string name="wed_abrv">Wed</string>
    <string name="thu_abrv">Thu</string>
    <string name="fri_abrv">Fri</string>
    <string name="sat_abrv">Sat</string>

    <!-- Delete Dialog -->
    <string name="delete_yes">Yes</string>
    <string name="delete_no">No</string>

    <!-- Add Events Activity -->
    <string name="title_add_events_activity">New Event</string>
    <string name="hint_title">Title</string>
    <string name="hint_icon_url">Icon URL</string>
    <string-array name="clubhouses_selection">
        <item>Select a location</item>
        <item>Hill</item>
        <item>Jack Walker</item>
        <item>Columbia</item>
        <item>Southeast</item>
    </string-array>
    <string name="hint_lower_age">Lower Age</string>
    <string name="hint_upper_age">Upper Age</string>
    <string name="hint_event_date">Event Date</string>
    <string name="hint_start_time">Start Time</string>
    <string name="hint_end_time">End Time</string>
    <string name="hint_description">Description</string>
    <string name="button_submit">Submit</string>
    <string name="checkbox_event_recurs">This event recurs.</string>
    <string name="button_select_days">Select Days</string>

    <!-- Recurring Dialog -->
    <string name="recurring_positive">Confirm</string>
    <string name="recurring_negative">Cancel</string>
    <string name="first_day">Sunday</string>
    <string name="second_day">Monday</string>
    <string name="third_day">Tuesday</string>
    <string name="fourth_day">Wednesday</string>
    <string name="fifth_day">Thursday</string>
    <string name="sixth_day">Friday</string>
    <string name="seventh_day">Saturday</string>

    <!-- Events -->
    <string name="event_age_group">Ages: %1d to %2d</string>

    <!-- Join Club -->
    <string name="joinClub_intro">Membership Application: Membership at Boys &amp; Girls Club of Lancaster is only $1 per year for all children ages 6-18! Download our membership
        application and return it to a Clubhouse to join the fun!</string>
    <string name="joinClub_outro">Our Clubhouses are positive places where kids are emotionally and
        physically safe, surrounded by full-time, trained, caring youth development professionals
        who are role models and mentors to our members.</string>
    <string name="joinClub_english_app">English Application</string>
    <string name="joinClub_spanish_app">Spanish Application</string>

    <!-- Add Member of the month -->
    <string name="addMemberMonth_hint">Enter a member of the month</string>
    <string name="addMemberMonth_errorMessage">Looks like you missed a member!</string>
    <string name="addMemberMonth_successMessage">Submitted successfully</string>
    <string name="title_add_member_activity">Add Members of the Month</string>
</resources>
