<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_log_in"
        android:orderInCategory="2"
        android:title="@string/action_log_in"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_event"
        android:orderInCategory="3"
        android:title="@string/action_new_event"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_member"
        android:orderInCategory="4"
        android:title="@string/action_new_member"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_announement"
        android:orderInCategory="3"
        android:title="New Announcement"
        app:showAsAction="never" />
</menu>
