<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_featuredImage_joinClub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/join_club_featured"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_joinIntro_joinClub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/joinClub_intro"
        app:layout_constraintBottom_toTopOf="@+id/btn_joinEnglish_joinClub"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_featuredImage_joinClub" />

    <Button
        android:id="@+id/btn_joinEnglish_joinClub"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/joinClub_english_app"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_joinSpanish_joinClub"
        app:layout_constraintTop_toBottomOf="@+id/iv_featuredImage_joinClub"
        android:textAllCaps="false"
        android:onClick="onEnglishJoinPress"/>

    <Button
        android:id="@+id/btn_joinSpanish_joinClub"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/joinClub_spanish_app"
        app:layout_constraintTop_toTopOf="@id/btn_joinEnglish_joinClub"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_joinEnglish_joinClub"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:onClick="onSpanishJoinPress"/>

    <TextView
        android:id="@+id/tv_joinOutro_joinClub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/joinClub_outro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_joinEnglish_joinClub" />

</android.support.constraint.ConstraintLayout>